bug: Patched distortions in set status modal.

--- a/packages/main/src/components/protected/topbar/styles/SetStatusModal.module.css
+++ b/packages/main/src/components/protected/topbar/styles/SetStatusModal.module.css
@@ -55,8 +55,8 @@
   color: white;
   margin-bottom: 20px;
   height: 49px;
-  padding-right: 25px;
-  padding-top: 10px;
+  /* padding-right: 25px; */
+  padding: 1.7rem 25px 1.7rem 0;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
 }
@@ -329,10 +329,9 @@
   cursor: pointer;
 }
 .inactivesave {
-  margin-top: 20px;
-  height: 48px;
+  margin-top: 10px;
   border-radius: 3px;
-  padding: 12px 18px;
+  padding: 0.3rem 1.6rem;
   margin-right: 30px;
   border: 1px solid #dedede;
   background: #dedede;
@@ -347,6 +346,7 @@
   text-align: center;
   display: flex;
   align-items: center;
+  cursor: pointer;
 }
 .recentstatustitle {
   color: #999999;
